--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,13 +2,17 @@
 <html>
     <head>
         <title>The Last Blog</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-    <div class="page-header">
+
+    <div class="page-header"><a href="{% url 'post_new' %}" class="top-menu">{% if user.is_authenticated %}<span class="glyphicon glyphicon-plus"></span>{% endif %}</a>
+
         <h1><a href="/">The Last Blog</a></h1>
     </div>
     <div class="content container">
