--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,8 +11,13 @@
     </head>
     <body>
 
-    <div class="page-header"><a href="{% url 'post_new' %}" class="top-menu">{% if user.is_authenticated %}<span class="glyphicon glyphicon-plus"></span>{% endif %}</a>
-
+    <div class="page-header">{% if user.is_authenticated %}
+            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+            <a href="{% url 'logout' %}" class="top-menu">Hello,{{ user.username }} <span class="glyphicon glyphicon-log-out"></span></a>
+        {% else %}
+            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-log-in"></span></a>
+        {% endif %}
         <h1><a href="/">The Last Blog</a></h1>
     </div>
     <div class="content container">
